Construção, treinamento e avaliação dos modelos preditivos (Regressão Logística e Random Forest) com métricas adicionais (Precision, Recall)

--- a/TelecomX_Parte2.ipynb
+++ b/TelecomX_Parte2.ipynb
@@ -174,18 +174,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "cbb42b52",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Remoção de registros com valores ausentes na variável alvo\n",
-    "dados = dados.dropna(subset=['Churn'])"
+    "df_clean = dados.dropna(subset=['Churn'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "987318a8",
    "metadata": {},
    "outputs": [
@@ -419,13 +419,13 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dados.head()"
+    "df_clean.head()"
    ]
   },
   {
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "675edb09",
    "metadata": {},
    "outputs": [],
@@ -520,8 +520,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Separando variável alvo (y) das variáveis explicativas (X)\n",
-    "X = dados.drop(columns='Churn')\n",
-    "y = dados['Churn']\n",
+    "X = df_clean.drop(columns='Churn')\n",
+    "y = df_clean['Churn']\n",
     "\n",
     "# Separação treino/teste\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "d4786cd6",
    "metadata": {},
    "outputs": [
@@ -579,7 +579,7 @@
     "\n",
     "# Plotando a distribuição de Churn (clientes que cancelaram vs. os que ficaram)\n",
     "plt.figure(figsize=(8,6))\n",
-    "dados['Churn'].value_counts().plot(kind='bar', color=['skyblue', 'salmon'])\n",
+    "df_clean['Churn'].value_counts().plot(kind='bar', color=['skyblue', 'salmon'])\n",
     "plt.title('Distribuição de Clientes - Churn (Cancelamento de Serviço)', fontsize=14)\n",
     "plt.xlabel('Churn (0 = Não Cancelou, 1 = Cancelou)', fontsize=12)\n",
     "plt.ylabel('Número de Clientes', fontsize=12)\n",
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "942b23b7",
    "metadata": {},
    "outputs": [
@@ -619,7 +619,7 @@
     "\n",
     "# Gráfico 2: Distribuição das variáveis numéricas - Histograma de 'account.Charges.Monthly'\n",
     "plt.figure(figsize=(8,6))\n",
-    "sns.histplot(dados['account.Charges.Monthly'], kde=True, color='purple', bins=30)\n",
+    "sns.histplot(df_clean['account.Charges.Monthly'], kde=True, color='purple', bins=30)\n",
     "plt.title('Distribuição dos Valores Mensais de Cobrança', fontsize=14)\n",
     "plt.xlabel('Valor Mensal de Cobrança (R$)', fontsize=12)\n",
     "plt.ylabel('Número de Clientes', fontsize=12)\n",
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "id": "a982d5ce",
    "metadata": {},
    "outputs": [
@@ -658,11 +658,11 @@
     "import seaborn as sns\n",
     "\n",
     "# Definindo as variáveis numéricas\n",
-    "numeric_cols = dados.select_dtypes(include=['int64', 'float64']).columns.tolist()\n",
+    "numeric_cols = df_clean.select_dtypes(include=['int64', 'float64']).columns.tolist()\n",
     "numeric_cols.remove('Churn')  # Removendo a variável alvo 'Churn'\n",
     "\n",
     "# Gerando o gráfico de correlação\n",
-    "correlation_matrix = dados[numeric_cols].corr()\n",
+    "correlation_matrix = df_clean[numeric_cols].corr()\n",
     "\n",
     "# Plotando o heatmap de correlação\n",
     "plt.figure(figsize=(10,8))\n",
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "id": "6ed4d5e6",
    "metadata": {},
    "outputs": [
@@ -701,7 +701,7 @@
    "source": [
     "# Gráfico 4: Análise de churn por categoria - Gráfico de barras por 'customer.gender'\n",
     "plt.figure(figsize=(8,6))\n",
-    "sns.countplot(x='customer.gender', hue='Churn', data=dados, palette='coolwarm')\n",
+    "sns.countplot(x='customer.gender', hue='Churn', data=df_clean, palette='coolwarm')\n",
     "plt.title('Análise de Churn por Gênero dos Clientes', fontsize=14)\n",
     "plt.xlabel('Gênero', fontsize=12)\n",
     "plt.ylabel('Número de Clientes', fontsize=12)\n",
@@ -711,11 +711,207 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "bc48ef5e",
    "metadata": {},
+   "source": [
+    "## Padronização dos Dados Numéricos\n",
+    "\n",
+    "### Objetivo:\n",
+    "\n",
+    "O objetivo desta etapa é normalizar os dados numéricos para que todos os atributos utilizados na modelagem de Machine Learning tenham uma escala similar, evitando que variáveis com maiores magnitudes dominem o modelo. Isso é especialmente importante para algoritmos como SVM, K-means e Regressão Logística, que são sensíveis à escala das variáveis.\n",
+    "\n",
+    "### Método escolhido:\n",
+    "\n",
+    "Vamos utilizar o StandardScaler, que transforma as variáveis para que tenham média 0 e desvio padrão 1. Isso ajuda a garantir que todas as variáveis contribuam igualmente para a modelagem, sem que valores grandes ou pequenos influenciem desproporcionalmente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "383f99a3",
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Selecionando as variáveis numéricas para padronização\n",
+    "numerical_data = df_clean[numeric_cols]\n",
+    "\n",
+    "# Inicializando o StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# Ajustando o scaler aos dados e transformando as variáveis numéricas\n",
+    "df_clean[numeric_cols] = scaler.fit_transform(numerical_data)\n",
+    "\n",
+    "# Verificando a transformação\n",
+    "df_clean[numeric_cols].head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f090916",
+   "metadata": {},
+   "source": [
+    "### Construção e Avaliação dos Modelos Preditivos\n",
+    "\n",
+    "Com a padronização dos dados concluída, agora vamos construir e treinar **dois modelos preditivos** para classificar o churn dos clientes:\n",
+    "\n",
+    "1. **Regressão Logística**: Modelo linear de classificação binária.\n",
+    "2. **Random Forest**: Modelo baseado em árvores de decisão que é robusto a overfitting.\n",
+    "\n",
+    "Cada modelo será treinado com os dados de treino e avaliado com as seguintes métricas:\n",
+    "- **Acurácia**: Porcentagem de previsões corretas.\n",
+    "- **AUC-ROC**: A área sob a curva ROC, que nos ajuda a entender a capacidade do modelo de discriminar entre as classes.\n",
+    "- **F1-Score**: Métrica que balanceia a precisão e o recall, importante quando há desequilíbrio entre as classes.\n",
+    "\n",
+    "A seguir, vamos avaliar o desempenho de cada modelo e comparar os resultados para escolher o melhor para o nosso problema de previsão de churn.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc9c9997",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score, f1_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Definindo as variáveis de treino e teste\n",
+    "X_train, X_test, y_train, y_test = train_test_split(df_clean[numeric_cols], df_clean['Churn'], test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Modelos\n",
+    "models = {\n",
+    "    'Regressão Logística': LogisticRegression(),\n",
+    "    'Random Forest': RandomForestClassifier()\n",
+    "}\n",
+    "\n",
+    "# Resultados de avaliação\n",
+    "results = {}\n",
+    "\n",
+    "# Treinamento e Avaliação dos Modelos\n",
+    "for model_name, model in models.items():\n",
+    "    model.fit(X_train, y_train)  # Treinamento\n",
+    "    y_pred = model.predict(X_test)  # Previsão\n",
+    "    \n",
+    "    # Avaliação\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    auc_roc = roc_auc_score(y_test, y_pred)\n",
+    "    f1 = f1_score(y_test, y_pred)\n",
+    "    \n",
+    "    results[model_name] = {'Acurácia': accuracy, 'AUC-ROC': auc_roc, 'F1-Score': f1}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00551e86",
+   "metadata": {},
+   "source": [
+    "### Resultados dos Modelos Preditivos\n",
+    "\n",
+    "Após treinar os modelos **Regressão Logística** e **Random Forest**, avaliamos seu desempenho utilizando as seguintes métricas:\n",
+    "\n",
+    "- **Acurácia**: A porcentagem de previsões corretas.\n",
+    "- **AUC-ROC**: A área sob a curva ROC, que nos ajuda a entender a capacidade do modelo de discriminar entre as classes.\n",
+    "- **F1-Score**: Métrica que balanceia a precisão e o recall, importante quando há desequilíbrio entre as classes.\n",
+    "\n",
+    "Abaixo estão os resultados para **Regressão Logística** e **Random Forest**:\n",
+    "\n",
+    "- **Regressão Logística**: O modelo linear simples.\n",
+    "- **Random Forest**: O modelo baseado em múltiplas árvores de decisão.\n",
+    "\n",
+    "Com esses resultados, podemos comparar a performance dos modelos e escolher o melhor para o nosso problema de previsão de churn."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "02bf9d69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Acurácia</th>\n",
+       "      <th>AUC-ROC</th>\n",
+       "      <th>F1-Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Regressão Logística</th>\n",
+       "      <td>0.790632</td>\n",
+       "      <td>0.682623</td>\n",
+       "      <td>0.533965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Random Forest</th>\n",
+       "      <td>0.771469</td>\n",
+       "      <td>0.673881</td>\n",
+       "      <td>0.519403</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Acurácia   AUC-ROC  F1-Score\n",
+       "Regressão Logística  0.790632  0.682623  0.533965\n",
+       "Random Forest        0.771469  0.673881  0.519403"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Exibindo os resultados\n",
+    "results_df = pd.DataFrame(results).T\n",
+    "results_df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad96ca65",
+   "metadata": {},
+   "source": [
+    "## Interpretação\n",
+    "\n",
+    "**Acurácia:** A Regressão Logística apresenta uma acurácia ligeiramente superior (0.79) em relação ao Random Forest (0.77), indicando que, no geral, o modelo de regressão tem um desempenho um pouco melhor.\n",
+    "\n",
+    "**AUC-ROC:** A Regressão Logística também tem uma AUC-ROC superior (0.68), o que sugere que ela é um pouco melhor em discriminar entre as classes de churn e não-churn, mas ambos os modelos têm AUC-ROC abaixo de 0.7, o que pode indicar que os modelos podem ser aprimorados.\n",
+    "\n",
+    "**F1-Score:** O F1-Score também mostra que a Regressão Logística supera o Random Forest. O F1-Score é uma métrica importante quando há desequilíbrio entre as classes, e um valor de 0.53 para a Regressão Logística é um valor razoável, mas que pode ser melhorado com ajustes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee36bdfc",
+   "metadata": {},
    "source": []
   }
  ],
