Adiciona balanceamento de classes com SMOTE, re-treinamento dos modelos (Regressão Logística e Random Forest) com dados balanceados e avaliação com novas previsões. Criação de função para previsão de churn e geração de dados aleatórios para testes.

--- a/TelecomX_Parte2.ipynb
+++ b/TelecomX_Parte2.ipynb
@@ -1339,12 +1339,283 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "bf747e5c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Considerações Importantes\n",
+    "\n",
+    "Embora os resultados mostrem que os modelos tiveram um desempenho perfeito, na prática, um desempenho perfeito como esse pode indicar overfitting. Ou seja, os modelos podem estar muito ajustados aos dados de treinamento e podem não se sair tão bem em dados reais, ainda não vistos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75f7a219",
+   "metadata": {},
+   "source": [
+    "Balanceamento de Classes\n",
+    "\n",
+    "Em problemas de classificação como o de previsão de churn (onde nosso objetivo é prever se um cliente irá cancelar o serviço), é comum que as classes de dados (neste caso, os clientes que irão cancelar e os que não irão cancelar) estejam desbalanceadas. Ou seja, pode haver muito mais clientes que não irão cancelar do que clientes que irão cancelar, o que faz com que o modelo tenda a prever mais a classe majoritária, ignorando a classe minoritária.\n",
+    "\n",
+    "Este desequilíbrio de classes pode levar o modelo a ter uma alta acurácia (ao prever que a maioria dos clientes não cancelará), mas um desempenho muito ruim ao tentar prever os clientes que realmente irão cancelar (a classe minoritária).\n",
+    "\n",
+    "Como o SMOTE Resolve Isso?\n",
+    "\n",
+    "O SMOTE (Synthetic Minority Over-sampling Technique) é uma técnica de over-sampling, que gera instâncias sintéticas da classe minoritária, ou seja, cria novos exemplos da classe \"churn\" (clientes que irão cancelar) ao invés de simplesmente duplicar as amostras já existentes.\n",
+    "\n",
+    "Essa técnica ajuda a balancear o número de instâncias de cada classe, permitindo que o modelo aprenda de forma mais equilibrada e consiga identificar melhor os padrões da classe minoritária. Isso é especialmente importante quando estamos tratando de dados desbalanceados, como é o caso de muitos projetos de previsão de churn, onde o número de clientes que cancelam (classe minoritária) é muito menor do que os que não cancelam.\n",
+    "\n",
+    "Justificativa do Balanceamento para o Nosso Modelo\n",
+    "\n",
+    "Desbalanceamento das Classes: No nosso conjunto de dados, é muito provável que a classe não-churn (clientes que não cancelam) seja maior do que a classe churn (clientes que irão cancelar), o que pode fazer o modelo se concentrar mais na primeira classe.\n",
+    "\n",
+    "Melhoria na Performance da Classe Minoritária: O balanceamento com o SMOTE permitirá que o modelo tenha um desempenho mais equilibrado, evitando que ele favoreça a classe majoritária.\n",
+    "\n",
+    "Aumento na Precisão da Predição:\n",
+    "\n",
+    "Ao gerar exemplos sintéticos, o modelo será treinado com um conjunto de dados mais equilibrado, o que pode melhorar as métricas como F1-Score, Precisão e Recall, especialmente no que diz respeito à identificação da classe minoritária.\n",
+    "\n",
+    "O Que Será Feito:\n",
+    "\n",
+    "Aplicação do SMOTE: Usaremos a técnica SMOTE para balancear as classes no conjunto de dados de treino.\n",
+    "\n",
+    "Re-treinamento dos Modelos:\n",
+    "\n",
+    "Depois de balancear os dados, vamos re-treinar os modelos de Regressão Logística e Random Forest com os dados balanceados.\n",
+    "\n",
+    "Avaliação das Métricas:\n",
+    "\n",
+    "Após o treinamento, avaliaremos o desempenho dos modelos com as métricas Acurácia, AUC-ROC, F1-Score, Precisão e Recall nos dados de teste, para garantir que o modelo esteja corretamente ajustado para classificar as duas classes de forma equilibrada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4180f387",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Acurácia</th>\n",
+       "      <th>AUC-ROC</th>\n",
+       "      <th>F1-Score</th>\n",
+       "      <th>Precisão</th>\n",
+       "      <th>Recall</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Regressão Logística</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Random Forest</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Acurácia  AUC-ROC  F1-Score  Precisão  Recall\n",
+       "Regressão Logística       1.0      1.0       1.0       1.0     1.0\n",
+       "Random Forest             1.0      1.0       1.0       1.0     1.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score, f1_score, precision_score, recall_score\n",
+    "\n",
+    "# Dividir os dados em treino e teste\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Aplicando o SMOTE para balanceamento das classes\n",
+    "smote = SMOTE(random_state=42)\n",
+    "X_train_res, y_train_res = smote.fit_resample(X_train, y_train)\n",
+    "\n",
+    "# Modelos a serem treinados\n",
+    "models = {\n",
+    "    'Regressão Logística': LogisticRegression(max_iter=1000),\n",
+    "    'Random Forest': RandomForestClassifier(n_estimators=100)\n",
+    "}\n",
+    "\n",
+    "# Armazenar os resultados das métricas de avaliação\n",
+    "evaluation_results = {}\n",
+    "\n",
+    "for model_name, model in models.items():\n",
+    "    # Treinar o modelo com dados balanceados\n",
+    "    model.fit(X_train_res, y_train_res)\n",
+    "    \n",
+    "    # Previsões nos dados de teste\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    \n",
+    "    # Calculando as métricas\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    auc_roc = roc_auc_score(y_test, y_pred)\n",
+    "    f1 = f1_score(y_test, y_pred)\n",
+    "    precision = precision_score(y_test, y_pred)\n",
+    "    recall = recall_score(y_test, y_pred)\n",
+    "    \n",
+    "    # Armazenar os resultados\n",
+    "    evaluation_results[model_name] = {\n",
+    "        'Acurácia': accuracy,\n",
+    "        'AUC-ROC': auc_roc,\n",
+    "        'F1-Score': f1,\n",
+    "        'Precisão': precision,\n",
+    "        'Recall': recall\n",
+    "    }\n",
+    "\n",
+    "# Exibindo os resultados da avaliação nos dados de teste após balanceamento\n",
+    "evaluation_results_df = pd.DataFrame(evaluation_results).T\n",
+    "\n",
+    "evaluation_results_df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab3212f2",
+   "metadata": {},
+   "source": [
+    "Esses resultados perfeitos (1.0) indicam que, após o balanceamento de classes, os modelos Regressão Logística e Random Forest conseguiram identificar com precisão tanto os clientes que não cancelam (classe majoritária) quanto os que cancelam (classe minoritária). Isso significa que o modelo conseguiu equilibrar o aprendizado entre as duas classes, sem favorecer uma sobre a outra.\n",
+    "\n",
+    "Acurácia (1.0): O modelo acertou todas as previsões, ou seja, ele foi capaz de prever corretamente se os clientes iriam ou não cancelar o serviço.\n",
+    "\n",
+    "AUC-ROC (1.0): O modelo separou perfeitamente as classes churn e não-churn, com uma taxa de discriminação de 100%. Isso indica que o modelo tem uma excelente capacidade de distinguir entre as duas classes.\n",
+    "\n",
+    "F1-Score (1.0): O modelo possui um ótimo equilíbrio entre precisão e recall. Ele identificou corretamente os casos positivos (clientes que cancelam) sem gerar muitos falsos positivos ou falsos negativos.\n",
+    "\n",
+    "Precisão (1.0): Quando o modelo previu que o cliente iria cancelar, ele estava absolutamente certo.\n",
+    "\n",
+    "Recall (1.0): O modelo foi capaz de identificar todos os clientes que realmente iriam cancelar o serviço, sem deixar nenhum caso importante para trás.\n",
+    "\n",
+    "O Que Significa Para o Negócio?\n",
+    "\n",
+    "Esses resultados indicam que o modelo está bem ajustado para identificar os clientes que provavelmente irão cancelar o serviço, o que é crucial para as estratégias de retenção. O balanceamento ajudou a garantir que o modelo não favorecesse a classe de clientes que não cancelam (que seria mais representada) e conseguiu aprender a identificar corretamente os clientes que realmente têm potencial de churn.\n",
+    "\n",
+    "Considerações Importantes\n",
+    "\n",
+    "Embora os resultados sejam perfeitos, é importante lembrar que em um cenário real, é improvável que o modelo tenha um desempenho perfeito em todos os casos. Isso pode indicar um problema de overfitting, onde o modelo se ajustou muito bem aos dados de treino e pode não se sair tão bem em dados novos. Por isso, o modelo deverá ser monitorado e ajustado regularmente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b7f943d",
+   "metadata": {},
+   "source": [
+    "## Função de Previsão e Teste com Dados Aleatórios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "225f338f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\wlami\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0.])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Função para fazer a previsão\n",
+    "def prever_churn(modelo, novos_dados):\n",
+    "    \"\"\"\n",
+    "    Faz previsões sobre novos registros usando um modelo treinado.\n",
+    "\n",
+    "    Parâmetros:\n",
+    "    modelo: o modelo treinado (Regressão Logística ou Random Forest)\n",
+    "    novos_dados: um DataFrame contendo os dados dos novos clientes para prever\n",
+    "\n",
+    "    Retorna:\n",
+    "    Previsões: A previsão do modelo para os novos dados\n",
+    "    \"\"\"\n",
+    "    previsoes = modelo.predict(novos_dados)\n",
+    "    return previsoes\n",
+    "\n",
+    "# Gerar 3 registros aleatórios para teste\n",
+    "# Agora com 10 variáveis, igual aos dados de treino\n",
+    "novos_dados = pd.DataFrame({\n",
+    "    'customer.gender': np.random.choice([0, 1], size=3),  # Gênero (0 ou 1)\n",
+    "    'customer.SeniorCitizen': np.random.choice([0, 1], size=3),  # Idoso (0 ou 1)\n",
+    "    'customer.Partner': np.random.choice([0, 1], size=3),  # Possui parceiro (0 ou 1)\n",
+    "    'customer.Dependents': np.random.choice([0, 1], size=3),  # Dependentes (0 ou 1)\n",
+    "    'customer.tenure': np.random.randint(1, 73, size=3),  # Tempo de contrato (1-72 meses)\n",
+    "    'phone.PhoneService': np.random.choice([0, 1], size=3),  # Serviço de telefone (0 ou 1)\n",
+    "    'account.PaperlessBilling': np.random.choice([0, 1], size=3),  # Fatura digital (0 ou 1)\n",
+    "    'account.Charges.Monthly': np.random.uniform(30.0, 120.0, size=3),  # Cobrança mensal aleatória\n",
+    "    'account.Charges.Total': np.random.uniform(100.0, 2000.0, size=3),  # Cobrança total aleatória\n",
+    "    'internet.InternetService_Fiber optic': np.random.choice([0, 1], size=3),  # Tipo de serviço de internet (0 ou 1)\n",
+    "})\n",
+    "\n",
+    "# Garantir que as variáveis numéricas sejam escaladas da mesma forma que durante o treinamento\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# Normalizando os dados\n",
+    "novos_dados_normalizados = scaler.fit_transform(novos_dados)\n",
+    "\n",
+    "# Usando os modelos treinados (exemplo com Random Forest)\n",
+    "modelo_treinado = RandomForestClassifier(n_estimators=100)\n",
+    "modelo_treinado.fit(X_train_res, y_train_res)  # Re-treinar com dados balanceados\n",
+    "\n",
+    "# Fazendo previsões\n",
+    "previsoes = prever_churn(modelo_treinado, novos_dados_normalizados)\n",
+    "\n",
+    "# Exibindo as previsões para os registros aleatórios\n",
+    "previsoes\n"
+   ]
   }
  ],
  "metadata": {
